--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
     {% include links.html %}
 
     <p>
-      <span>Jekflix</span> was made with <svg class="love"><use xlink:href="#icon-heart"></use></svg> by <a href="https://rossener.com" target="_blank" class="creator">Thiago Rossener</a>
+      <span>Thunkable Recipes</span> was made with <svg class="love"><use xlink:href="#icon-heart"></use></svg> by <a href="https://thunkable.com" target="_blank" class="creator">Thunkable</a>
     </p>
 </footer>
 
