--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -1,7 +1,7 @@
 $theme: (
-  themeColor: #ff0a16,
-  primaryDark: #141414,
-  accentDark: #ffffff,
+  themeColor: #EB524A,
+  primaryDark: #ffffff,
+  accentDark: #000000,
   lightGray: #f2f2f2,
   texts: #333333
 );
