--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,3 +1,11 @@
 ---
 ---
+
+$themeColor: #EB524A;
+$primaryDark: #2B255A;
+$accentDark: #AB98B4;
+$lightGray: #f2f2f2;
+$texts: #333333;
+
+
 @import "jekflix";
